--- a/CareNow/src/app/app.component.html
+++ b/CareNow/src/app/app.component.html
@@ -180,19 +180,19 @@
   <!--ADMINISTRATOR-->
   <div class="navigation" *ngIf="service.isAdministrator">
     <div class="naviIcon" title="Pharmacist" routerLink="listPharmacist">
-      <img src="assets/img/list.png" alt="Calendar Icon" width="100%">
+      <img src="assets/img/pharmacist.png" alt="Calendar Icon" width="100%">
     </div>
     <div class="naviIcon" title="Cashier" routerLink="listCash">
-      <img src="assets/img/list.png" alt="Calendar Icon" width="100%">
+      <img src="assets/img/cashier.png" alt="Calendar Icon" width="100%">
     </div>
-    <div class="naviIcon" title="Cashier" routerLink="listDoc">
-      <img src="assets/img/list.png" alt="Calendar Icon" width="100%">
+    <div class="naviIcon" title="Doctor" routerLink="listDoc">
+      <img src="assets/img/doctor.png" alt="Calendar Icon" width="100%">
     </div>
-    <div class="naviIcon" title="Cashier" routerLink="listStockManager">
-      <img src="assets/img/list.png" alt="Calendar Icon" width="100%">
+    <div class="naviIcon" title="StockManager" routerLink="listStockManager">
+      <img src="assets/img/manger.png" alt="Calendar Icon" width="100%">
     </div>
-    <div class="naviIcon" title="Cashier" routerLink="listRec">
-      <img src="assets/img/list.png" alt="Calendar Icon" width="100%">
+    <div class="naviIcon" title="Receptionist" routerLink="listRec">
+      <img src="assets/img/recep.png" alt="Calendar Icon" width="100%">
     </div>
     <div class="naviIcon" title="CareNow Memo" routerLink="create_memo">
       <img src="assets/img/memoIcon.png" alt="CareNow Memo Icon" width="100%">
