--- a/CareNow/src/app/component/add-reception/regis.component.css
+++ b/CareNow/src/app/component/add-reception/regis.component.css
@@ -16,12 +16,59 @@ input[type=date], select, textarea{
   resize: vertical;
   
 }
+input.ng-valid
+{
+  border-left: 3px solid rgb(1, 197, 1);
+}
+.submit.ng-invalid
+{
+  opacity: 0.5;
+}
+
+.error
+{
+  color: red;
+  margin-left: 10px;
+  margin-top: 17px;
+  font-family: sans-serif;
+  font-size: 10px;
+}
+
+input.ng-invalid
+{
+  border-left: 3px solid red;
+} 
+
+input.ng-untouched
+{
+  background-color: rgb(255, 255, 255);
+  border-left: 2px solid white;
+}
+
+input[type=date] {
+  text-align: right;
+}
+
+input[type="date"]:before {
+  color: lightgrey;
+  content: attr(placeholder) !important;
+  margin-right: 0.5em;
+}
+
+input[type="date"]:before {
+  color: lightgrey;
+  content: attr(placeholder) !important;
+  margin-right: 0.5em;
+}
+input[type="date"]:focus:before {
+  content: '' !important;
+}
 
 .inputx[type=text], select, textarea{
   width: 100%;
   padding: 12px;
 
-  background-color: #c8caf5;
+  background-color: #fdfdfd;
   border-radius: 4px;
  
   resize: vertical;
@@ -42,11 +89,6 @@ input[type=date]:focus {
   
 }
 
-/* Style the label to display next to the inputs */
-label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
-}
 
 /* Style the submit button */
 .submit {
@@ -60,30 +102,13 @@ label {
   margin-left: 40%;
   margin-top: 23px;
 }
-input[type=date] {
-  text-align: right;
-}
 
-input[type="date"]:before {
-  color: lightgrey;
-  content: attr(placeholder) !important;
-  margin-right: 0.5em;
-}
-
-input[type="date"]:before {
-  color: lightgrey;
-  content: attr(placeholder) !important;
-  margin-right: 0.5em;
-}
-input[type="date"]:focus:before {
-  content: '' !important;
-}
 
 
 /* Style the container */
 .container {
   border-radius: 5px;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   padding: 20px;
   width: 95%;
   display: inline-block;
@@ -128,7 +153,7 @@ input[type="date"]:focus:before {
   border-radius: 5px;
   background-color:#c8caf5;
   padding: 40px;
-  width: 98%;
+  width: 100%;
   height: 20px;
   display: inline-block;
 }
