--- a/CareNow/src/app/component/list-cashier/list-cashier.component.css
+++ b/CareNow/src/app/component/list-cashier/list-cashier.component.css
@@ -19,19 +19,19 @@
   }
 
   .list
-  {
-    width: 100%;
-    margin-top: 10px;
-    background-color: #fcf9f9;
-    padding: 16px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin-bottom: 50px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
-  }
+{
+  width: 100%;
+  margin-top: 23px;
+  background-color: #ffffffc9;
+  padding: 16px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 50px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
   .orders {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -66,34 +66,61 @@
     
   }
   .delete
-  {
-    background-color: #d10808c0;
+{
+  background-color: #d10808c0;
+color: white;
+padding: 10px 18px;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+position:relative;
+margin-top: 10px;
+margin-right: 10px;
+margin-left: 30px;
+}
+
+.edit
+{
+  background-color: #0fcc48c0;
   color: white;
-  padding: 10px 15px;
+  padding: 10px 25px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   position:relative;
   margin-top: 10px;
-  margin-right: 10px;
-  }
+  margin-right: 0px;
+}
+.export
+{
+  float: right;
+  background-color: #eec409c7;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  position:relative;
+  margin-top: 0px;
+}
+.submit.ng-invalid
+{
+  opacity: 0.5;
+}
 
-  .edit
-  {
-    background-color: #0fcc48c0;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    position:relative;
-    margin-top: 10px;
-    margin-right: 10px;
-  }
+.error
+{
+  color: red;
+  margin-left: 10px;
+  margin-top: 17px;
+  font-family: sans-serif;
+  font-size: 10px;
+}
+
   .export
   {
     float: right;
-    background-color: #e9bf04c7;
+    background-color: #eec409c7;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -103,11 +130,25 @@
     margin-top: 0px;
   }
 
+  .add
+  {
+    float: right;
+    background-color: #009e9ee8;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position:relative;
+    margin-top: 0px;
+    margin-right:8px;
+  }
+
   .backShader {
     background-color: rgba(0, 0, 0, 0.753);
     position: absolute;
     left:0;
-    top:0;
+    top:-8%;
     z-index:999;
     width:100%;
     height:100%;
@@ -133,11 +174,13 @@
     resize: vertical;
     width: 30%;
     transition: width 0.4s ease-in-out;
+    margin-right: 7px;
 
   }
 
   .search[type=text]:focus {
-    width: 70%;
+    border: 1px solid white;
+    width: 53%;
   }
 
   input[type=text], select, textarea{
@@ -208,7 +251,17 @@
     margin-left: 35%;
     margin-top: 23px;
   }
-  
+  .submit {
+    background-color: #298588;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position:relative;
+    margin-left: 40%;
+    margin-top: 23px;
+  }
   
   
   /* Style the container */
