--- a/CareNow/src/app/component/list-reception/list-reception.component.html
+++ b/CareNow/src/app/component/list-reception/list-reception.component.html
@@ -3,9 +3,8 @@
 
     <h2 style="font-family: Arial; margin-left:450px;"> Availiable Receptionists</h2>
 
-    <input class = "search" type = "text" [(ngModel)] = "filters.keyword"
-    name= "keyword"
-    (input)="listReception()">
+    <input class = "search" type = "text" [(ngModel)] = "filterterm"
+    name= "keyword">
 
     <select class = "filters" name = "sortBy" [(ngModel)] = "filters.sortBy" (change) = "listReception()">
         <option> FirstName </option>
@@ -16,7 +15,8 @@
 
 
     </select>
-
+    <button class = "export" (click) = "downloadPDF()"> Export PDF </button>
+    <button class = "add" (click)="addReception()" > add recep </button>
     <div >
       <table class= "list" id ="contentToConvert">
         <tr style="text-align:center; "  >
@@ -25,122 +25,133 @@
           <th>Last Name</th>
           <th>NIC</th>
           <th>Gender</th>
-          
           <th>Contact Number </th>
+          <th>Address </th>
           <th>Email</th>
           <th>DOB </th>
           <th>Hired Date </th>
     
         </tr>
           
-             <tr style="text-align:center; " *ngFor="let recep of reception">
+             <tr style="text-align:center; " *ngFor="let recep of reception | filter:filterterm">
                   <td>{{recep.employeeId}}</td>
                   <td >{{recep.firstName}}</td>
                   <td >{{recep.lastName}}</td>
                   <td >{{recep.nic}}</td>
                   <td >{{recep.gender}}</td>
                   <td >{{recep.contactNo}}</td>
+                  <td >{{recep.address}}</td>
                   <td >{{recep.email}}</td>
                   <td >{{recep.dob}}</td>
                   <td >{{recep.hiredDate}}</td>
              
-                   <button class = "delete" (click)="deleteCashier(recep.employeeId)"> Delete </button> 
-                    <button class = "edit"  (click)="updateCashier(recep.employeeId)" > Edit </button>   
+                   <button class = "delete" (click)="deleteReception(recep.employeeId)"> Delete </button> 
+                    <button class = "edit"  (click)="edit(recep)" > Edit </button>   
                    
              </tr> 
              
       </table>  
-      <button class = "export" (click) = "downloadPDF()"> Export PDF </button>
+     
   </div>
 
 <div class="backShader" [style.display]="isDetVisible ? 'block' : 'none'">
     <span class="close" (click)="closeDetail()">&times;</span>
   
-        <form (ngSubmit)="saveReception()" name = "form" >
-
-            <div class="container2" >
-
-                <h1 style="font-family: Arial; color: white; margin-left: 150px;"> Add Receptionist</h1>
-  
-                <div class="row">
-                  <div class="col-75">
-                    <input type="text" name="firstName" [(ngModel)]="reception.firstname"
-                                        placeholder="Enter Receptionist name" />
-                  </div>
-                </div>
-            
-                <div class="row">
-                  <div class="col-75">
-                    <input type="text" name="email" [(ngModel)]="reception.lastname" 
-                    placeholder="Enter LastName" />
-                  </div>
-                </div>
-            
-                <div class="row">
-                  <div class="col-75">
-                        <select name="gender" id="gen" [(ngModel)]="reception.gender" >
-                          <option value="g"  selected  >Enter Gender</option>
-                        <option value="M">M</option>
-                        <option value="F">F</option>
-                        <option value="F">Non Binary</option>
-                    </select>
-                  </div>
-                </div>
-            <!--
-                <div class="row">
-                  <div class="col-75">
-                    <input type="text" name="tp" [(ngModel)]="reception.password" 
-                                        placeholder="Enter Password" ng-minlength='4' required />
-                <p ng-show ="form.password.$error.ng-minlength || form.password.$invalid" > </p>
-                  </div>
-                </div>
-            -->
-            <div class="row">
-              <div class="col-75">
-                <input type="text" name="nic" [(ngModel)]="reception.nic" 
-                placeholder="Enter NIC" />
-              </div>
-            </div>
-  
-            <div class="row">
-              <div class="col-75">
-                <input type="text" name="contactno" [(ngModel)]="reception.contactno" 
-                placeholder="Enter Contact No" />
-              </div>
-            </div>
-  
-            <div class="row">
-              <div class="col-75">
-                <input type="text" name="email" [(ngModel)]="reception.address" 
-                placeholder="Enter Address" />
-              </div>
-            </div>
-                <div class="row">
-                  <div class="col-75" style>
-                    <input type="text" name="drugtype" [(ngModel)]="reception.email" 
-                    placeholder="Enter Email" />
-                  </div>
-                </div>
-            
-                <div class="row">
-                  <div class="col-75">
-                    <input type="date" name="drugtype" [(ngModel)]="reception.dob" 
-                    placeholder="Enter DOB" />
-                  </div>
-                </div>
-  
-                <div class="row">
-                  <div class="col-75">
-                    <input type="date" name="drugtype" [(ngModel)]="reception.hiredDate" 
-                    placeholder="Enter hiredDate" />
-                  </div>
-                </div>
-                
-            
-                <button type = "submit" class = submit >  Save   </button>
-                <button *ngIf = "reception.employeeId" (click)="deleteReception(reception.employeeId)"> Delete </button>
-               
+    <form (ngSubmit)="updateReception()" name = "form" #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)" >
               
-              </div>  
-            </form>    
+      <div class="container2" >
+
+        <h1 style="font-family: Arial; color: white; margin-left: 150px;"> Add Receptionist</h1>
+
+        <div class="row">
+          <div class="col-75">
+            <input type="text" required #firstName="ngModel" name="firstName" [(ngModel)]="receptionEdit.firstName"
+                                placeholder="Enter Receptionist name" />
+          </div>
+          <span *ngIf="firstName.invalid && firstName.touched" class = "error" > First Name requried</span>
+        </div>
+    
+        <div class="row">
+          <div class="col-75">
+            <input type="text"  #lastName="ngModel" required name="lastname" [(ngModel)]="receptionEdit.lastName" 
+            placeholder="Enter LastName" />
+          </div>
+          <span *ngIf="lastName.invalid && lastName.touched" class = "error" > Last Name requried</span>
+        </div>
+    
+        <div class="row">
+          <div class="col-75">
+                <select name="gender" id="gen" [(ngModel)]="receptionEdit.gender" required >
+                  <option value="g"  selected  >Enter Gender</option>
+                <option value="M">M</option>
+                <option value="F">F</option>
+                <option value="F">Non Binary</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-75" style>
+            <input type="email" name="email" [(ngModel)]="receptionEdit.email" 
+            placeholder="Enter Email" #email="ngModel" email />
+          </div>
+          <span *ngIf="email.invalid && email.touched" class = "error" > Please enter a valid email</span>
+        </div>
+    <!--
+        <div class="row">
+          <div class="col-75">
+            <input type="password" minlength="4" name="password" [(ngModel)]="this.password" 
+                                placeholder="Enter Password"  required />
+          </div>
+        </div>
+   -->
+    <div class="row">
+      <div class="col-75">
+        <input type="text" #nic="ngModel" required name="nic" [(ngModel)]="receptionEdit.nic" 
+        placeholder="Enter NIC" />
+      </div>
+      <span *ngIf="nic.invalid && nic.touched" class = "error" > NIC is requried</span>
+    </div>
+
+    <div class="row">
+      <div class="col-75">
+        <input type="text" #contactNo="ngModel"  name="contactno" [(ngModel)]="receptionEdit.contactNo" 
+        placeholder="Enter Contact No" />
+      </div>
+      <span *ngIf="contactNo.invalid && contactNo.touched" class = "error" > Contact No is requried</span>
+    </div>
+
+    <div class="row">
+      <div class="col-75">
+        <input type="text" #address="ngModel" name="address" [(ngModel)]="receptionEdit.address" 
+        placeholder="Enter Address" />
+      </div>
+      <span *ngIf="address.invalid && address.touched" class = "error" > Address requried</span>
+    </div>
+
+    
+        <div class="row">
+          <div class="col-75">
+            <input type="date"  #dob="ngModel" name="dob" [(ngModel)]="receptionEdit.dob" 
+            placeholder="Enter DOB" />
+          </div>
+          <span *ngIf="dob.invalid && dob.touched" class = "error" > Hired Date is requried</span>
+        </div>
+
+        <div class="row">
+          <div class="col-75">
+            <input type="date"  #hiredDate="ngModel" name="hiredDate" [(ngModel)]="receptionEdit.hiredDate" 
+            placeholder="Enter hiredDate" />
+          </div>
+          <span *ngIf="hiredDate.invalid && hiredDate.touched" class = "error" > Hired Date is requried</span>
+        </div>
+        
+    
+        <button type = "submit" class = submit >  Save   </button>
+        <span *ngIf="userForm.invalid && userForm.touched" class = "error" > Invalid Form Entry</span>
+       
+      
+      </div>  
+    </form> 
+            
 </div>
